# pr-review

./: .dockerignore  .env  .gitignore  AGENTS.md  PROJECT.md  README.md  bot.dockerfile  compose.yml  debug_test.py  dockerfile  notes.md  planning.md  pyproject.toml  quick_test.py  test_partial_args.py  tool_plans.md  tui_test.py
evals/: ground_truth.json
evals/2025-07-30_23-38-18/: model-response.json  summary.json
evals/2025-07-30_23-47-12/: model-response.json  summary.json
evals/2025-07-30_23-48-55/: model-response.json  summary.json
evals/2025-07-31_00-14-05/: model-response.json  summary.json
evals/2025-07-31_00-27-09/: model-response.json  summary.json
evals/2025-07-31_00-32-20/: model-response.json  summary.json
evals/dataset/: all_projects_info.json
evals/dataset/ansible/: ground-truth.json
evals/dataset/black/: ground-truth.json
evals/dataset/fastapi/: ground-truth.json
evals/dataset/spacy/: ground-truth.json
evals/dataset/youtube-dl/: ground-truth.json
evals/output/eval_ansible_2025-08-05_02-33-56/: aggregate_results.json
evals/output/eval_black_2025-08-05_00-47-03/: aggregate_results.json
evals/output/eval_black_2025-08-05_01-43-09/: aggregate_results.json
evals/output/eval_fastapi_2025-08-05_02-09-15/: aggregate_results.json
evals/output/eval_spacy_2025-08-05_03-21-58/: aggregate_results.json
logs/: sniff_messages.txt
scripts/: demo.py  eval.py  full_agent_flow_test.py  simulator.py  test.py  test_streaming.py
src/agent/: __init__.py  agent.py  messages.py  sandbox.py
src/agent/evals/: __init__.py  evaluator.py  ground_truth.py  metrics.py
src/agent/evaluation/: __init__.py  bug_matcher.py  evaluator.py
src/agent/messaging/: README.md  __init__.py  receiver.py  sender.py  types.py
src/agent/prompts/: system_prompt.txt
src/agent/tools/: __init__.py  bash.py  bash.txt  cat.py  cat.txt  glob.py  glob.txt  grep.py  grep.txt  ls.py  ls.txt  path_utils.py  rg_utils.py  todo.py  todoread.py  todoread.txt  todowrite.py  todowrite.txt
src/agent/utils/: __init__.py  conversation_logger.py  file_tracker.py  message_processor.py  (+4 more)
src/bug_bot/: __init__.py  bug_bot.py  metadata.py  prompts.py  response_saver.py
src/evaluation/: bug_matcher.py  evaluator.py
src/paths/: __init__.py
src/prreview/: __init__.py
src/server/: __init__.py  main.py
src/tui/: app.py  app.tcss
tests/: __init__.py  conftest.py  test_json_detector.py
tests/tools/: __init__.py  test_cat.py  test_glob.py  test_grep.py  test_ls.py  test_todoread.py  test_todowrite.py
(+486 files in other folders)
