[project]
name = "bug-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucien Thomas", email = "lucienthomas00@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "openai>=1.97.1",
    "pydantic-ai>=0.4.9",
    "qwen-agent[code-interpreter,gui,mcp,rag]>=0.0.5",
    "setuptools<81",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.scripts]
bug-bot = "bug_bot:main"

[tool.uv.build-backend]
module-name = ["bug_bot", "bug_bot_server"]
module-root = "src"

[build-system]
requires = ["uv_build>=0.7.20,<0.8"]
build-backend = "uv_build"
