[project]
name = "sniff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lucien Thomas", email = "lucienthomas00@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "qwen-agent[code-interpreter,gui,mcp,rag]>=0.0.5",
    "setuptools<81",
    "rich==14.0.0",
    "pygments==2.19.1",
    "ascii-magic>=2.3.0",
    "pillow>=11.3.0",
    "textual>=4.0.0",
    "ijson>=3.2",
    "docker>=7.1.0",
    "textual-pyfiglet>=1.0.1",
    "python-dotenv>=1.0.1",
]

[project.scripts]
sniff = "tui.app:app"
test = "pytest:main"

[tool.uv.build-backend]
module-name = ["agent", "tui"]
module-root = "src"

[build-system]
requires = ["uv_build>=0.7.20,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "textual-dev>=1.7.0",
]
